<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_create"
        android:title="@string/create_item"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_item"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="always" />

</menu>